<resources>
    <string name="app_name">LandingPageActivity</string>
    <string name="nama_app">Mobile</string>
    <string name="ek_img_content">ExportKit Image</string>
    <string name="username_string">Username</string>
    <string name="email_string">Email</string>
    <string name="password_string">Password</string>
    <string name="konfirmasi_password_string">Konfirmasi Password</string>
    <string name="buat_akun_baru_string">Buat Akun Baru</string>
    <string name="register_string">Register</string>
    <string name="sudah_memiliki_akun__string">Sudah memiliki akun?</string>
    <string name="log_in_string"><u>Log in</u></string>
    <string name="molen_string">Molen</string>
    <string name="si_string">Si</string>
    <string name="account_circle">account_circle</string>
    <string name="key">key</string>
    <string name="key_ek1">key_ek1</string>
    <string name="mail_1">mail_1</string>
    <string name="vector">vector</string>
    <string name="mobil_2">mobil_2</string>
    <string name="bengkel_1">Bengkel Kurnia Mulia</string>
    <string name="bengkel_2">Bengkel Jaya Wijaya</string>
    <string name="bengkel_3">Bengkel Lemah Abadi</string>
    <string name="desc_bengkel_1">Bengkel terbaik!</string>
    <string name="desc_bengkel_2">Pelayanan teramah!</string>
    <string name="desc_bengkel_3">Rating tertinggi!</string>
    <string name="item_rating">Rating</string>
</resources>